Bug #10942 "deadlock with FLUSH TABLES WITH READ LOCK + STOP SLAVE" don't allow STOP SLAVE if global read lock is in taken